# machine2human

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  __init__.py  m2h.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  codeql-analysis.yml  pypi-release.yml  python-package.yml
m2h/: __init__.py  m2h.py
src/m2h/: __init__.py  __version__.py  lang.py  m2h.py
tests/: __init__.py  m2h_test.py  test_hum2sec.py  test_sec2hum.py  test_speed.py
